[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/prefabs/actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://gfx/models/characters/rastera.glb" type="PackedScene" id=2]
[ext_resource path="res://gfx/models/characters/vertex_color_outlined.material" type="Material" id=3]
[ext_resource path="res://gfx/ui/knife_butt_press.png" type="Texture" id=4]
[ext_resource path="res://gfx/ui/knife_butt_disable.png" type="Texture" id=5]
[ext_resource path="res://gfx/ui/knife_butt.png" type="Texture" id=6]
[ext_resource path="res://scripts/ai/rastera_attacks.gd" type="Script" id=7]
[ext_resource path="res://gfx/ui/aim_butt_disable.png" type="Texture" id=8]
[ext_resource path="res://gfx/ui/aim_butt_press.png" type="Texture" id=9]
[ext_resource path="res://gfx/ui/aim_butt.png" type="Texture" id=10]
[ext_resource path="res://gfx/ui/cancel_butt_press.png" type="Texture" id=11]
[ext_resource path="res://gfx/ui/cancel_butt.png" type="Texture" id=12]
[ext_resource path="res://gfx/fonts/stencil_28.tres" type="DynamicFont" id=13]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.145594, 0.298851, 0.436782, 0.597701, 0.750958, 0.877395, 1 )
colors = PoolColorArray( 0.262695, 1, 0, 1, 0, 0, 0, 1, 0.262695, 1, 0, 1, 0.0337221, 0.12837, 0, 1, 0.262695, 1, 0, 1, 0.0337221, 0.12837, 0, 1, 0.262695, 1, 0, 1, 0.0337221, 0.12837, 0, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=1]
flag_rotate_y = true
direction = Vector3( 0, 0, 1 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 4.0
angle = 90.0
scale = 6.0
color_ramp = SubResource( 5 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_specular_mode = 4

[sub_resource type="TextMesh" id=3]
material = SubResource( 2 )
text = "<"
font = ExtResource( 13 )

[node name="Rastera" instance=ExtResource( 1 )]

[node name="RasteraAttacks" type="Node" parent="." index="0"]
script = ExtResource( 7 )

[node name="Model" parent="." index="1" instance=ExtResource( 2 )]

[node name="rastera" parent="Model/rastera_rig/Skeleton" index="0"]
material/0 = ExtResource( 3 )

[node name="ThrowPoint" type="BoneAttachment" parent="Model/rastera_rig/Skeleton" index="1"]
transform = Transform( -0.236557, -0.910383, 0.339475, 0.950378, -0.289459, -0.113998, 0.202046, 0.295662, 0.933681, -1.74423, 3.78538, -0.538737 )
bone_name = "hand.r"

[node name="Label3D" parent="." index="3"]
text = ""

[node name="KnifeButt" type="TextureButton" parent="PlayerUI" index="0" groups=["player_ui"]]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -134.0
margin_right = 72.0
margin_bottom = -70.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 5 )

[node name="CancelButt" type="TextureButton" parent="PlayerUI" index="1" groups=["player_ui"]]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -133.0
margin_right = -64.0
margin_bottom = -69.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )

[node name="AimButt" type="TextureButton" parent="PlayerUI" index="2" groups=["player_ui"]]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -134.0
margin_right = 4.0
margin_bottom = -70.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_disabled = ExtResource( 8 )

[node name="AimTrail" type="Particles" parent="." index="5"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.0238029, 5.0494, 3.30977 )
emitting = false
amount = 16
lifetime = 4.0
preprocess = 5.0
visibility_aabb = AABB( -12.4312, -19.5301, -13.6826, 24.8625, 39.0954, 26.9727 )
process_material = SubResource( 1 )
draw_pass_1 = SubResource( 3 )

[editable path="Model"]
